Send repeat garps for extra resilientcy

--- a/image/service/keepalived/assets/keepalived.conf
+++ b/image/service/keepalived/assets/keepalived.conf
@@ -1,4 +1,10 @@
 global_defs {
+  # Add default higher resiliency - repeat gARP periodically when master
+  # See https://serverfault.com/questions/821809/keepalived-send-gratuitous-arp-periodically?utm_medium=organic&utm_source=google_rich_qa&utm_campaign=google_rich_qa
+  vrrp_garp_master_delay 10
+  vrrp_garp_master_refresh 60
+  vrrp_garp_master_refresh_repeat 5
+
   default_interface {{ KEEPALIVED_INTERFACE }}
 }
 
